--- a/css/index.css
+++ b/css/index.css
@@ -4,13 +4,13 @@ html {
 
 body {
   height: 100%;
-  margin: 1px;
+  margin: 0px;
 }
 html[data-theme=light] body {
-  background-color: "fff";
-  color: "000";
+  background-color: #fff;
+  color: #2c3e50;
 }
 html[data-theme=dark] body {
-  background-color: "#000";
-  color: "#fff";
+  background-color: #000;
+  color: #fff;
 }/*# sourceMappingURL=index.css.map */
